--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-MONGO_URI=mongodb://localhost:27017/mxh
+MONGO_URI1=mongodb://localhost:27017/mxh
 MONGO_URI4=mongodb+srv://socialapp:socialapp@cluster0-o6fur.mongodb.net/test?retryWrites=true&w=majority
-PORT=8080
+MONGO_URI=mongodb+srv://admin:admin@hutechmxh.rqwhx.mongodb.net/hutechmxh?retryWrites=true&w=majority
+PORT=80
 JWT_SECRET=asdfghjklqwertyuiopxcghj
 CLIENT_URL=http://localhost:3000
