thay đổi database sang California

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MONGO_URI1=mongodb://localhost:27017/mxh
 MONGO_URI4=mongodb+srv://socialapp:socialapp@cluster0-o6fur.mongodb.net/test?retryWrites=true&w=majority
-MONGO_URI=mongodb+srv://admin:admin@hutechmxh.rqwhx.mongodb.net/hutechmxh?retryWrites=true&w=majority
+MONGO_URI5=mongodb+srv://admin:admin@hutechmxh.rqwhx.mongodb.net/hutechmxh?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:admin@mxhv2.br8mb.mongodb.net/mxhv2?retryWrites=true&w=majority
 PORT=80
 JWT_SECRET=asdfghjklqwertyuiopxcghj
 CLIENT_URL=http://localhost:3000
